--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.1.6",
+    "react-share": "^5.1.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
